# Signal

./: CMakeLists.txt  RAPORT.ipynb  README.md  Signal.cpp  Signal.h  raport.ipynb
